# webtrh_alerts

./: .gitignore  .sample_env  Alert.py  Email.py  LICENSE  Procfile  README.md  alert.py  app.py  commands.py  config.py  email_manager.py  engine.py  mainloop.py  message.py  pyproject.toml  requirements.txt  sended.py  settings.py  symbol.py  test_dotenv.py  valid_dotenv.py  webtrh.py
modules/: database.py  deal.py  discord_bot.py  discord_client.py  message.py  webtrh_client.py
