[tool.poetry]
name = "webtrh"
version = "0.1.0"
description = "Discord bot getting new orders from webtrh.cz"
authors = ["Radim Mifka <radimmifka@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lxml = ">=4.9.0,<4.10.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.31.0"
python-dotenv = "^0.21.0"
discord = "^2.1.0"
mysql-connector-python = "^8.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
